# EZllm

./: .gitignore  CMakeLists.txt  README.md
base/: CMakeLists.txt
device/: CMakeLists.txt
frame/: CMakeLists.txt
ir/: CMakeLists.txt
ops/: CMakeLists.txt
ops/cuda/: cuda_ops.h  gemm.cu
samples/: CMakeLists.txt
tests/: CMakeLists.txt  test_dummy.cc
